# Athena-New

./: .env.example  .prospector.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  shields.json
evaluation/: .env.example  .gitignore  README.md  pyproject.toml
evaluation/model/: model.py
evaluation/scripts/: 1_exercises.py  1_sampling_exercises.py  2_feedback_generation_(1).py  2_sampling_submissions.py  3_feedback_generation.py  4_expert_evaluation.py  4_sampling.py  6_llm_as_a_judge_(2).py  8_analysis.py
evaluation/service/: db_service.py  json_service.py  sampling_service.py
modules/programming/module_programming_llm/: llm_config.yml  pyproject.toml
modules/programming/module_programming_llm/module_programming_llm/: config.py  generate_graded_suggestions_by_file.py  generate_non_graded_suggestions_by_file.py  generate_summary_by_file.py  split_grading_instructions_by_file.py  split_problem_statement_by_file.py
modules/programming/module_programming_llm/module_programming_llm/approaches/: basic_by_file_approach.py
modules/programming/module_programming_llm/module_programming_llm/helpers/: utils.py  web_search.py
modules/programming/module_programming_llm/module_programming_llm/prompts/: pipeline_step.py
modules/programming/module_programming_llm/module_programming_llm/prompts/filter_out_solution/: filter_out_solution.py
modules/programming/module_programming_llm/module_programming_llm/prompts/generate_file_summary/: generate_file_summary.py
modules/programming/module_programming_llm/module_programming_llm/prompts/generate_grading_criterion/: generate_grading_criterion.py
modules/programming/module_programming_llm/module_programming_llm/prompts/generate_suggestions_by_file/: generate_suggestions_by_file.py
modules/programming/module_programming_llm/module_programming_llm/prompts/rag/: rag.py
modules/programming/module_programming_llm/module_programming_llm/prompts/split_grading_instructions_by_file/: split_grading_instructions_by_file.py
modules/programming/module_programming_llm/module_programming_llm/prompts/split_problem_statement_by_file/: split_problem_statement_by_file.py
modules/programming/module_programming_llm/module_programming_llm/prompts/validate_suggestions/: validate_suggestions.py
modules/programming/module_programming_winnowing/: pyproject.toml
modules/programming/module_programming_winnowing/module_programming_winnowing/convert_code_to_ast/: extract_method_and_ast.py  get_feedback_methods.py
tests/integration_tests/: README.md  pyproject.toml
tests/integration_tests/eunomia/: README.md  pyproject.toml
tests/integration_tests/eunomia/eval/: main.py
tests/integration_tests/eunomia/eval/core/: scenario_evaluation.py  test_case_runner.py
tests/integration_tests/eunomia/eval/models/entities/: evaluation_runner.py  scenario.py  scenario_result.py  test_case_result.py
tests/integration_tests/eunomia/eval/reporting/: output_scenario_reports.py  write_file_scenario_csv_report.py  write_file_scenario_json_report.py  write_file_test_case_json_report.py  write_terminal_scenario_summary_report.py
tests/integration_tests/eunomia/eval/reporting/helpers/: generate_scenario_dataframes.py
tests/integration_tests/eunomia/eval/utils/: filter_scenarios.py  get_user_input.py  llm_cost_calculator.py  load_llm_cost_config.py  request_feedback.py
tests/integration_tests/eunomia/scenarios/: llm_cost.yml
tests/integration_tests/eunomia/scenarios/bpmn_loan/: example_solution.json  manifest.yml
tests/integration_tests/eunomia/scenarios/bpmn_loan/test_cases/: activity_has_been_merged.json  activity_missing_entirely.json  excessive_diagram_object.json  missing_description_on_timed_event.json  missing_end_event.json  missing_event.json  missing_gateway.json  missing_incoming_connection.json  missing_message_flow.json  missing_outgoing_connection.json  missing_sequence_flow.json  missing_start_event.json  no_gateway_logic_description.json  non_control_flow_as_control_flow.json  sequence_flow_crossing_pool_boundaries.json  unlabelled_activity.json  unlabelled_event.json  unlabelled_gateway.json  unlabelled_lane.json  unlabelled_pool.json  use_of_uncontrolled_flows.json  use_of_wrong_activity_type.json  use_of_wrong_event_type.json  use_of_wrong_gateway_type.json  using_an_event_as_indicator.json  wrong_naming_scheme.json  wrong_sequence_of_diagram_objects.json  wrong_use_of_end_event.json  wrong_use_of_start_event.json  wrong_use_of_the_loop_marker.json  wrong_use_of_the_parallel_multi_instance_marker.json  wrong_use_of_the_sequential_multi_instance_marker.json  wrongly_named_activity.json  wrongly_named_connecting_objects.json  wrongly_named_event.json  wrongly_named_gateway.json  (+1 more)
tests/integration_tests/integration_tests/mocks/llm_core/: __init__.py
tests/integration_tests/integration_tests/runners/: run_assessment_module_manager.py  run_module_modeling_llm.py  run_module_programming_llm.py  run_module_text_llm.py
tests/integration_tests/integration_tests/tests/: assessment_module_manager_test.py
(+269 files in other folders)
