[tool.poetry]
name = "module_programming_winnowing"
version = "0.1.0"
description = "Programming assessment Winnowing module."
authors = ["Marlon Bucciarelli <marlon.bucciarelli@tum.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"
# if you have local changes in the common Athena module, use the line below. Otherwise, please use a VCS stable version. Also, a version with tag = "" is possible.
# athena = { path = "../athena", develop = true }
athena = { git = "https://github.com/ls1intum/Athena.git", rev = "bbb2bb0", subdirectory = "athena"}
nltk = "^3.6.5"
antlr4-python3-runtime = "^4.13.1"

[tool.poetry.group.dev.dependencies]
pydantic = "1.10.17"
prospector = "^1.10.2"

[tool.poetry.scripts]
module = "athena:run_module"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
